// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartBulletGroupTitle 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="300"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 300"
      width="450"
    />
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="300"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 300"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartBulletGroupTitle 2`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="300"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 300"
      width="450"
    />
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="300"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 300"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders component data 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="300"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 300"
      width="450"
    >
      <text
        direction="inherit"
        dx="0"
        id="test2"
        x="225"
        y="48.675000000000004"
      >
        <tspan
          dx="0"
          dy="0"
          style="fill: var(--pf-chart-bullet--label--grouptitle--Fill, #151515); font-size: 24px; text-anchor: middle; font-family: var(--pf-chart-global--FontFamily, \\"RedHatText\\", \\"Overpass\\", overpass, helvetica, arial, sans-serif); letter-spacing: var(--pf-chart-global--letter-spacing, normal); stroke: transparent;"
          text-anchor="middle"
          x="225"
        >
          Text label
        </tspan>
        <tspan
          dx="0"
          dy="13.5"
          style="fill: var(--pf-chart-bullet--label--subtitle--Fill, #b8bbbe); font-size: 14px; text-anchor: middle; font-family: var(--pf-chart-global--FontFamily, \\"RedHatText\\", \\"Overpass\\", overpass, helvetica, arial, sans-serif); letter-spacing: var(--pf-chart-global--letter-spacing, normal); stroke: transparent;"
          text-anchor="middle"
          x="225"
        >
          Measure details
        </tspan>
      </text>
      <line
        style="fill: var(--pf-chart-bullet--group-title--divider--Fill--Color, #f0f0f0); opacity: 1; stroke: var(--pf-chart-bullet--group-title--divider--stroke--Color, #f0f0f0); stroke-width: 2;"
        vector-effect="non-scaling-stroke"
        x1="0"
        x2="450"
        y1="103.81"
        y2="103.81"
      />
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="300"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 300"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;
